# LLM-DSF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALLATION.md  README.md  environment.yaml  main.py  pyproject.toml  pytest.ini  run_tests.py
logging/: _logging_archiver.py
model-input/: Open ML Sample Prompt.txt
models/feedback prompt/: prompt_10.txt  prompt_5.txt
src/LLM_DSF/: LLM.py  central_logger.py  cli.py  code_parser.py  container.py  data_preprocessor.py  experiment.py  inference_runner.py  input_parser.py  write_logs.py
tests/: conftest.py  test data_preprocessor.py  test_code_parser.py  test_container.py  test_input_parser.py  test_llm.py
