
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-DSF"
version = "1.0.0"
description = "LLM-DSF framework designed for master thesis research"
readme = "README.md"
authors = [
    {name = "Remco Stuij", email = "remcostuij@gmail.com"}
]
requires-python = ">=3.12"
#dependencies = [
#    "pandas==2.2.3",
#    "numpy==2.0.2",
#    "docker==7.1.0",
#    "llama-cpp-python==0.3.7",
#    "fastparquet==2024.11.0",
#    "matplotlib==3.10.0",
#    "seaborn==0.13.2",
#    "scikit-learn==1.6.1",
#    "torch==2.6.0",
#    "tensorflow==2.18.0",
#]

#[project.optional-dependencies]
#dev = [
#    "pytest==8.3.4",
#    "pytest-cov==6.0.0",
#    "pytest-timeout==2.3.1",
#    "pytest-mock==3.14.0",
#    "pre-commit==3.5.0",
#    "flake8==7.0.0",
#    "black==24.2.0",
#    "isort==5.13.2",
#]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
